change publish to npm and yarn instead

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,36 +1,30 @@
-name: Node.js Package
+name: Protils Package
 
 on:
   release:
     types: [created]
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org/
 
       - run: yarn install --frozen-lockfile
+
       - run: yarn test
 
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
+      - run: yarn build
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn publish --registry=https://npm.pkg.github.com/
+      - name: Publish to npm and yarn
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm publish --access public
+          yarn publish --access public
