--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cashelng/pro-tils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A small typeScript utilities package providing extensions to handle your values gracefully.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -17,5 +17,9 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.4.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cashelng/pro-tils.git"
   }
 }
