--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "exit 0",
+    "test": "jest",
     "build": "npx tsc"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test"
+    }
   },
   "keywords": [
     "typescript",
@@ -16,6 +21,10 @@
   "author": "Cashel",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   },
   "repository": {
