--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cashelng/pro-tils",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A small typeScript utilities package providing extensions to handle your values gracefully.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,7 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "husky": "^9.0.11",
+    "husky": "8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
